--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="search">Rechercher</string>
 
     <string name="team_banner_cd">Bannière de l\'équipe</string>
+
+    <string name="no_internet_connection">Pas de connexion internet</string>
 </resources>
